<resources>
    <string name="app_name">BeFoot</string>
    <string name="title_matches">Matchs</string>
    <string name="title_leagues">Leagues</string>
    <string name="title_teams">Teams</string>
    <string name="team_separator">vs</string>
    <string name="title_activity_league">LeagueActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nomatch_msg">No matchs found</string>
    <string name="matchscore_default">-</string>
    <string name="hometeam_default">Home Team</string>
    <string name="awayteam_default">Away Team</string>
    <string name="nameTeamDefault">nameTeam</string>
    <string name="nbPointsDefault">0</string>
    <string name="placeScorerDefault">0</string>
    <string name="btnprev_desc">previous date</string>
    <string name="btnnext_desc">next date</string>
    <string name="nameScorerDefault">nameScorer</string>

    <string-array name="leagueSelectorArray">
        <item name="FL1">Ligue 1</item>
        <item name="PL">Premier League</item>
        <item name="PD">LIGA</item>
        <item name="BL1">Bundesliga</item>
        <item name="SA">Serie A</item>
        <item name="CL">Champions League</item>
    </string-array>
</resources>
