<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/placeScorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeScorerDefault"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/namePlayer"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/nameScorerDefault"
            android:textSize="15sp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/nameTeam"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/nameTeamDefault"
            android:textSize="15sp"
            android:layout_marginStart="160dp"/>

        <TextView
            android:id="@+id/nbGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nbPointsDefault"
            android:textSize="15dp"
            android:layout_marginStart="290dp"/>


    </RelativeLayout>
</LinearLayout>