<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchActivity">

    <ListView
        android:id="@+id/listMatches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leagueSelector"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/noMatchesMsg"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/btn_prev"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:contentDescription="@string/btnprev_desc"
        android:backgroundTint="@android:color/transparent"
        app:srcCompat="@drawable/baseline_arrow_back_black_18dp" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/btnnext_desc"
        android:layout_marginEnd="0dp"
        android:backgroundTint="@android:color/transparent"
        app:srcCompat="@drawable/baseline_arrow_forward_black_18dp" />

    <TextView
        android:id="@+id/matchesDate"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/btn_next"
        android:layout_toEndOf="@+id/btn_prev"
        android:text="@string/title_matches"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="9dp" />

    <Spinner
        android:id="@+id/leagueSelector"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/matchesDate"
        android:layout_marginTop="9dp"
        android:entries="@array/leagueSelectorArray"
        android:spinnerMode="dropdown"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/noMatchesMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leagueSelector"
        android:layout_marginTop="0dp"
        android:text="@string/nomatch_msg"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />




</RelativeLayout>